Getting all my files set up

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>Webpack Starter Kit</title>
+    <title>The Oxford Hotel</title>
   </head>
   <body>
-    <h1>Webpack Starter Kit</h1>
+    <h1>Welcome to the Oxford Hotel</h1>
     <!-- Do not include the index.js or main.bundle.js file here - it is done automatically by the webpack server -->
   </body>
 </html>
+
+
+<!-- users: [
+{
+id: 1,
+name: "Leatha Ullrich"
+} ]
+
+rooms: [
+{
+number: 1,
+roomType: "residential suite",
+bidet: true,
+bedSize: "queen",
+numBeds: 1,
+costPerNight: 358.4
+} ]
+
+
+bookings: [
+{
+id: "5fwrgu4i7k55hl6sz",
+userID: 9,
+date: "2020/02/04",
+roomNumber: 15,
+roomServiceCharges: [ ]
+} ] -->
