added in some starting css and login

--- a/src/index.html
+++ b/src/index.html
@@ -2,36 +2,17 @@
 <html lang="en-US">
   <head>
     <title>The Oxford Hotel</title>
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700,800&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Welcome to the Oxford Hotel</h1>
-    <!-- Do not include the index.js or main.bundle.js file here - it is done automatically by the webpack server -->
+    <body>
+      <h1>Oxford Hotel Login</h1>
+      <div class="main-login">
+        <label for="user-login">User name</label>
+        <input class="user-login" type="text" name="user name" aria-label="user name" value="manager">
+        <label for="password">Password</label>
+        <input class="password" type="password" name="password" value="overlook2019" aria-label="password">
+        <button class="login-button" type="button" name="Login">Login</button>
+      </div>
   </body>
 </html>
-
-
-<!-- users: [
-{
-id: 1,
-name: "Leatha Ullrich"
-} ]
-
-rooms: [
-{
-number: 1,
-roomType: "residential suite",
-bidet: true,
-bedSize: "queen",
-numBeds: 1,
-costPerNight: 358.4
-} ]
-
-
-bookings: [
-{
-id: "5fwrgu4i7k55hl6sz",
-userID: 9,
-date: "2020/02/04",
-roomNumber: 15,
-roomServiceCharges: [ ]
-} ] -->
