updated the index html page with just hinding and showing the manager page and customer page

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <body>
+      <section class="login-page">
       <h1>Oxford Hotel Login</h1>
       <div class="main-login">
         <label for="user-login">User name</label>
@@ -14,5 +15,27 @@
         <input class="password" type="password" name="password" value="overlook2019" aria-label="password">
         <button class="login-button" type="button" name="Login">Login</button>
       </div>
+    </section>
+    <section class="manager-view hide-class">
+      <h1>Overlook Hotel Manger Bookings</h1>
+      <p>Rooms available today: 0</p>
+      <p class="total-revenue-today"></p>
+
+      <fieldset>
+        <legend>Manager Control Board</legend>
+        <label for="search user"  User>Search User:</label>
+        <input type="text" name="" value="first and last name" aria-label="Search">
+        <button type="button" name="button">Submit</button>
+      </fieldset>
+    </section>
+    <section class="customer-page hide-class"> 
+      <title>Oxford Customer Bookings</title>
+      </head>
+      <body>
+      <h1>Oxford Customer Bookings</h1>
+      <label for="">Search by Date</label>
+      <input type="text" name="search by date" aria-label="Search by Date" value="">
+      <button type="button" name="button">Book</button>
+    </section>
   </body>
 </html>
