--- a/src/manager.html
+++ b/src/manager.html
@@ -5,10 +5,10 @@
     <title>Overlook Hotel Manager Bookings</title>
     <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700,800&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body class="manager-view">
     <h1>Overlook Hotel Manger Bookings</h1>
     <p>Rooms available today: 0</p>
-    <p>Total revenue for today: $0</p>
+    <p class="total-revenue-today"></p>
 
     <fieldset>
       <legend>Manager Control Board</legend>
