got the total revenue today on dom

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <section class="manager-view hide-class">
       <h1>Overlook Hotel Manger Bookings</h1>
       <p>Rooms available today: 0</p>
-      <p class="total-revenue-today"></p>
+      <p class="total-revenue-today"</p>
 
       <fieldset>
         <legend>Manager Control Board</legend>
@@ -28,7 +28,7 @@
         <button type="button" name="button">Submit</button>
       </fieldset>
     </section>
-    <section class="customer-page hide-class"> 
+    <section class="customer-page hide-class">
       <title>Oxford Customer Bookings</title>
       </head>
       <body>
