Got the number of rooms available today on the dom

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     </section>
     <section class="manager-view hide-class">
       <h1>Overlook Hotel Manger Bookings</h1>
-      <p>Rooms available today: 0</p>
+      <p class="number-of-rooms-available-today"></p>
       <p class="total-revenue-today"</p>
 
       <fieldset>
