added jquery button on manager page console logs name

--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,8 @@
       <fieldset>
         <legend>Manager Control Board</legend>
         <label for="search user"  User>Search User:</label>
-        <input type="text" name="" value="first and last name" aria-label="Search">
-        <button type="button" name="button">Submit</button>
+        <input class="search-name-value" type="text" name="" value="first and last name" aria-label="Search">
+        <button class="search-name-button" type="button" name="button">Submit</button>
       </fieldset>
     </section>
     <section class="customer-page hide-class">
