Got user name and amount spent on room on onthe dom also search by date works also

--- a/src/index.html
+++ b/src/index.html
@@ -32,10 +32,11 @@
       <title>Oxford Customer Bookings</title>
       </head>
       <body>
-      <h1>Oxford Customer Bookings</h1>
+      <h1 class="user-welcome">Oxford Customer Bookings</h1>
+      <p class="user-total-spent">$$$</p>
       <label for="">Search by Date</label>
-      <input type="text" name="search by date" aria-label="Search by Date" value="">
-      <button type="button" name="button">Book</button>
+      <input class="search-by-date-value" type="text" name="search by date" aria-label="Search by Date" value="2020/01/12">
+      <button class="search-by-date-button" type="button" name="button">Search</button>
     </section>
   </body>
 </html>
