moved the find user by name to manager class

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,9 @@
       <label for="">Search by Date</label>
       <input class="search-by-date-value" type="text" name="search by date" aria-label="Search by Date" value="2020/01/12">
       <button class="search-by-date-button" type="button" name="button">Search</button>
+      <article class="search-results"> 
+        <p>Room number</p>
+      </article>
     </section>
   </body>
 </html>
