got most test to pass but available rooms woworks but the test does not get the value returned it needs

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
       <h1>Overlook Hotel Manger Bookings</h1>
       <p class="number-of-rooms-available-today"></p>
       <p class="total-revenue-today"</p>
+        <p class="percent-full-today"</p>
 
       <fieldset>
         <legend>Manager Control Board</legend>
